--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
   <meta charset="UTF-8">
   <title>今日の運勢</title>
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 100px; }
-    button { font-size: 1.5em; padding: 10px 30px; }
-    #result { font-size: 2em; margin-top: 30px; }
+    body {
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 100px;
+    background-image: url("https://source.unsplash.com/1600x900/?stars,magic,dark");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: white;
+  }
+
+  button {
+    font-size: 1.5em;
+    padding: 10px 30px;
+  }
+
+  #result {
+    font-size: 2em;
+    margin-top: 30px;
+    padding: 1em;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    text-shadow: 1px 1px 3px black;
+  }
   </style>
 </head>
 <body>
