--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <title>今日の運勢</title>
   <style>
-    body {
+  body {
     font-family: sans-serif;
     text-align: center;
     margin-top: 100px;
-    background-image: url("https://source.unsplash.com/1600x900/?stars,magic,dark");
+    background-image: url("https://images.unsplash.com/photo-1610878180933-1fbe2034e7a4?auto=format&fit=crop&w=1600&q=80");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -18,6 +18,11 @@
   button {
     font-size: 1.5em;
     padding: 10px 30px;
+    border: none;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    cursor: pointer;
   }
 
   #result {
@@ -28,7 +33,8 @@
     border-radius: 10px;
     text-shadow: 1px 1px 3px black;
   }
-  </style>
+</style>
+
 </head>
 <body>
   <h1>🔮 今日の運勢</h1>
