--- a/index.html
+++ b/index.html
@@ -3,39 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title>今日の運勢</title>
-  
   <style>
-  body {
-    font-family: sans-serif;
-    text-align: center;
-    margin-top: 100px;
-    background-image: url("https://images.unsplash.com/photo-1610878180933-1fbe2034e7a4?auto=format&fit=crop&w=1600&q=80");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    color: white;
-  }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin-top: 100px;
+      background-image: url("https://source.unsplash.com/1600x900/?crystal,galaxy,magic");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      color: white;
+    }
 
-  button {
-    font-size: 1.5em;
-    padding: 10px 30px;
-    border: none;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.6);
-    color: white;
-    cursor: pointer;
-  }
+    button {
+      font-size: 1.5em;
+      padding: 10px 30px;
+      border: none;
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.6);
+      color: white;
+      cursor: pointer;
+    }
 
-  #result {
-    font-size: 2em;
-    margin-top: 30px;
-    padding: 1em;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    text-shadow: 1px 1px 3px black;
-  }
-</style>
-
+    #result {
+      font-size: 2em;
+      margin-top: 30px;
+      padding: 1em;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 10px;
+      text-shadow: 1px 1px 3px black;
+    }
+  </style>
 </head>
 <body>
   <h1>🔮 今日の運勢</h1>
